# nba-stats

./: .gitignore  AGENTS.md  README.md  basketball_reference.py  dev.ipynb  main.py  pyproject.toml  requirements-mcp.txt  requirements.txt  run_bbref_scraper.py  test.sql
ask/: __init__.py  __main__.py  agent.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: player_per_game.sql  standings.sql
dbt/models/staging/: stg_games.sql  stg_player_totals.sql  stg_roster.sql
docs/: talk-to-your-data.md
ingest/: __init__.py  load_warehouse.py
load/: load_ncaa.py  load_warehouse.py
load/models/: __init__.py  endpoints.py
load/modules/: __init__.py  api.py  aws.py  fetch.py  fetchers.py  ncaa_client.py  ncaa_fetch.py  utils.py  warehouse.py
load/nba/: __init__.py  __main__.py  fetch.py  fetchers.py
load/nba/models/: __init__.py  endpoints.py
load/ncaa/: __init__.py  __main__.py  box_score.py  client.py  core.py  fetch.py  rankings.py  roster.py  scoreboard.py  season.py  team_list.py  team_season.py
load/ncaa2/: constants.py  fetch.py  main.py  schedules.py  team_page.py  teams.py
load/ncaa2/pages/: individual_stats.py  play_by_play.py  schedules.py
mcp_server/: __init__.py  __main__.py  db.py  server.py
transform/: dbt_project.yml  profiles.yml
transform/models/: sources.yml
transform/models/marts/: _marts_schema.yml  dim_games.sql  dim_players.sql  dim_teams.sql  player_per_game.sql
transform/models/staging/: _staging_schema.yml  stg_box_summaries.sql  stg_games.sql  stg_player_info.sql  stg_players.sql  (+2 more)
